--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
 {
-  "manifest_version": 3,
   "name": "Custom Territorial Client",
-  "version": "1.0",
-  "description": "Injects custom client modifications into territorial.io",
-  "permissions": ["activeTab"],
-  "content_scripts": [
+  "short_name": "CTC",
+  "start_url": "/Alpha/",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "icons": [
     {
-      "matches": ["https://territorial.io/*"],
-      "js": ["client.js"],
-      "css": ["styles.css"]
+      "src": "assets/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
